updated colors and background

--- a/results.html
+++ b/results.html
@@ -34,29 +34,29 @@
 
     <div id="songsAndMovies">
       <div>
-        <p id="testing"></p>
+        <p id="testing" style="color:beige"></p>
         <audio controls>
           <source src="/" type="audio/mp3" id="masterPlay">
           Your browser does not support the audio element.
         </audio>
-        <h2>Songs</h2>
+        <h2 style="color:beige">Songs</h2>
         <ul id="yourSongs">
         </ul>
       </div>
 
       <div id="yourShows">
-        <h2>Shows</h2>
+        <h2 style="color:beige">Shows</h2>
         <ul id="yourMovies">
         </ul>
       </div>
     </div>
 
     <div id="theQuote">
-      <h3>Top pick for quotes based on your mood</h3>
+      <h3 style="color:beige">Top pick for quotes based on your mood</h3>
     </div>
     
     <div id="theReferences">
-      <h3>Reference articles for your emotion</h3>
+      <h3 style="color:beige">Reference articles for your emotion</h3>
     </div>
 
     <div id="additionalReferences"> 
@@ -67,7 +67,7 @@
 
 
   <footer>
-    <h2>Gold Diggers</h2>
+    <h2 style="color:beige">Gold Diggers</h2>
 
     <div id="audioSource">
 
@@ -79,7 +79,7 @@
     </audio>
 
 
-    <h2>&copy CodeFellows</h2>
+    <h2 style="color:beige">&copy CodeFellows</h2>
   </footer>
   <script src="js/results.js"></script>
 </body>
